17 Jan 2018 (0.33)
* Don't create intermediate CSV file for bad test case management report 
* Raise post-groovy alert for bad test case management report

15 Jan 2018 (0.32)
* Change to cope with coverage without a unit, to avoid
  corrupted coverage xml file

13 Dec 2017 (0.31)
* Corrected redundant quote in Linux single job
* Corrected link from xUnit trend graph to results

5 Dec 2017 (0.30)
* Fixed regression with naming of archived execution and management reports
* Added VCAST_VC_SCRIPT environment variable that if set, will copy the scripts
  to %WORKSPACE%/vc_scripts from there instead of from the plugin

27 Nov 2017 (0.29)
* Improved support for Manage projects / environment / compilers with long names

2 Nov 2017 (0.28)
* Fix regression %VAR% rather than $VAR in generated commands

2 Nov 2017 (0.27)
* Fix regression with missing space between --wait_loops and project name in
  call to generate-results.py in single job

1 Nov 2017 (0.26)
* Update to summary being written in groovy script - no longer sets description
  but sets summary text instead, avoiding HTML formatting problems in build history
* Allow retry when licenses unavailable to be used for single jobs as well
* Add ability to name the node label to be used for a single job or the top-level
  multi-job
* Allow the single job or top-level multi-job's name to be changed
* Use the Manage Project path (from the VectorCASTSetup stored information) to find
  the project to delete (if set, otherwise use the job name)

26 Oct 2017 (0.25)
* Update to retry to support jobs created with earlier plugin versions

25 Oct 2017 (0.24)
* Added (optional) command retry in the event of a license being unavailable
* Updated auto-update job to use all saved data from when multi-job was created
  (Won't work for previously created jobs that didn't save the data)

17 Oct 2017 (0.23)
* Added new auto-update multi-job to allow a scripted/scheduled job to