@@ -1,3 +1,6 @@
+10 May 2018
+* Support newer versions of Multijob (1.30 onwards)
+
 17 Jan 2018 (0.33)
 * Don't create intermediate CSV file for bad test case management report 
 * Raise post-groovy alert for bad test case management report
